--- a/provider/k8s/template/app/service.yml.tmpl
+++ b/provider/k8s/template/app/service.yml.tmpl
@@ -109,6 +109,7 @@ spec:
                 values:
                 - {{ .Value }}
           {{ end }}
+          {{ end }}
       {{ $hasTolerations := false }}
       {{ range keyValue .Service.NodeSelectorLabels }}
         {{ if eq .Key "convox.io/label" }}
