Add external dns support

--- a/provider/k8s/template/app/service.yml.tmpl
+++ b/provider/k8s/template/app/service.yml.tmpl
@@ -119,12 +119,14 @@ spec:
         {{ with .Resolver }}
         nameservers:
           - "{{ . }}"
+        {{ if not (index $ "DisableDnsSearches") }}
         searches:
           - "{{$.App.Name}}.{{$.Rack}}.local"
           - "{{$.Namespace}}.svc.cluster.local"
           - "{{$.Rack}}.local"
           - "svc.cluster.local"
           - "cluster.local"
+        {{ end }}
         {{ end }}
       {{ end }}
       serviceAccountName: {{.Service.Name}}
