--- a/provider/k8s/template/app/timer.yml.tmpl
+++ b/provider/k8s/template/app/timer.yml.tmpl
@@ -63,12 +63,14 @@ spec:
             {{ with .Resolver }}
             nameservers:
               - "{{ . }}"
+            {{ if not (index $ "DisableDnsSearches") }}
             searches:
               - "{{$.App.Name}}.{{$.Rack}}.local"
               - "{{$.Namespace}}.svc.cluster.local"
               - "{{$.Rack}}.local"
               - "svc.cluster.local"
               - "cluster.local"
+            {{ end }}
             {{ end }}
           {{ end }}
           restartPolicy: Never
