--- a/provider/k8s/template/resource/mysql.yml.tmpl
+++ b/provider/k8s/template/resource/mysql.yml.tmpl
@@ -82,6 +82,21 @@ spec:
         - mountPath: /var/lib/mysql
           name: data
           subPath: mysql
+        resources:
+          limits:
+            {{ if (index .Parameters "cpu") }}
+            cpu: "{{.Parameters.cpu}}m"
+            {{ end }}
+            {{ if (index .Parameters "mem") }}
+            memory: "{{.Parameters.mem}}Mi"
+            {{ end }}
+          requests:
+            {{ if (index .Parameters "cpu") }}
+            cpu: "{{.Parameters.cpu}}m"
+            {{ end }}
+            {{ if (index .Parameters "mem") }}
+            memory: "{{.Parameters.mem}}Mi"
+            {{ end }}
       volumes:
       - name: data
         persistentVolumeClaim:
