--- a/provider/k8s/template/resource/memcached.yml.tmpl
+++ b/provider/k8s/template/resource/memcached.yml.tmpl
@@ -10,10 +10,10 @@ metadata:
     type: resource
     resource: {{.Name}}
 data:
-  URL: "memcached://resource-{{ k8sname .Name }}.{{.Namespace}}.svc.cluster.local:11211"
+  URL: "memcached://resource-{{ k8sname .Name }}.{{.Namespace}}.{{ internalResourceDotDomainSuffix }}:11211"
   USER: ""
   PASS: ""
-  HOST: "resource-{{ k8sname .Name }}.{{.Namespace}}.svc.cluster.local"
+  HOST: "resource-{{ k8sname .Name }}.{{.Namespace}}.{{ internalResourceDotDomainSuffix }}"
   PORT: "11211"
   NAME: ""
 ---
@@ -75,6 +75,8 @@ kind: Service
 metadata:
   namespace: {{.Namespace}}
   name: resource-{{ k8sname .Name }}
+  annotations:
+    convox.com/alias: resource-{{ k8sname .Name }}.{{.Namespace}}.{{ internalResourceDotDomainSuffix }}
   labels:
     system: convox
     rack: {{.Rack}}
