--- a/provider/k8s/template/app/timer.yml.tmpl
+++ b/provider/k8s/template/app/timer.yml.tmpl
@@ -27,6 +27,11 @@ spec:
     spec:
       backoffLimit: 0
       # ttlSecondsAfterFinished: 60
+      {{ if gt .Timer.ParallelCount 1 }}
+      completionMode: "Indexed"
+      completions: {{ .Timer.ParallelCount }}
+      parallelism: {{ .Timer.ParallelCount }}
+      {{ end }}
       template:
         metadata:
           annotations:
@@ -102,6 +107,12 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: status.hostIP
+            {{ if gt .Timer.ParallelCount 1 }}
+            - name: TIMER_INDEX
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.annotations['batch.kubernetes.io/job-completion-index']
+            {{ end }}
             {{ range $.Resources }}
             - name: "{{.Env}}"
               valueFrom:
