--- a/provider/k8s/template/app/service.yml.tmpl
+++ b/provider/k8s/template/app/service.yml.tmpl
@@ -98,6 +98,7 @@ spec:
                 values:
                 - {{ .Value }}
               {{ end }}
+          {{ end }}
           {{ if .Service.NodeAffinityLabels }}
           preferredDuringSchedulingIgnoredDuringExecution:
           {{ range .Service.NodeAffinityLabels }}
@@ -110,7 +111,8 @@ spec:
                 - {{ .Value }}
           {{ end }}
           {{ end }}
-          {{ end }}
+      {{ end }}
+      {{ if .Service.NodeSelectorLabels }}
       {{ $hasTolerations := false }}
       {{ range keyValue .Service.NodeSelectorLabels }}
         {{ if eq .Key "convox.io/label" }}
